--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,11 @@
-<header id="top-header">
-    <span class="siteName">
-      <a href="/" title="Return to home page">CSE Motors</a>
-    </span>
-    <div id="tools">
-      <a title="Click to log in" href="/account/login">My Account</a>
+  <header id="header">
+    <div id="branding">
+      <a href="/" class="brand-link" title="Return to home page">
+        <span class="brand-title">CSE Motors</span>
+      </a>
     </div>
-</header>
+    <div id="account">
+      <a href="/account/login" class="account-link">My Account</a>
+    </div>
+  </header>
+  
