--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,64 @@
-<h1>John Ellefson</h1>
+
+<div id="main-title">   
+    <h1>Welcome to CSE Motors!</h1>
+</div>
+<div class="main-content">
+    <img src="../images/vehicles/delorean.jpg" alt="Delorean" class="main-image">
+    <div class="translucent-box">
+        <ul class="box-text">
+            <li id="box-title">DMC Delorean</li>
+            <li>3 Cup holders</li>
+            <li>Superman doors</li>
+            <li>Fuzzy dice!</li>
+        </ul>
+        <a href="#your-link" class="clickable-image">
+            <img src="../images/site/own_today.png" alt="Own today" class="translucent-box-image">
+        </a>
+    </div>
+    <div class="content-container-wrapper">
+        <div class="content-container">
+            <div class="main-reviews">
+                <h2 id="reviews-title">DMC Delorean Reviews</h2>
+                <ul class="main-reviews-items">
+                    <li>"So fast its almost like traveling in time." (4/5)</li>
+                    <li>"Coolest ride on the road." (4/5)</li>
+                    <li>"I'm feeling Marty McFly!" (5/5)</li>
+                    <li>"The most futuristic ride of our day." (4.5/5)</li>
+                    <li>"80's livin and I love it!" (5/5)</li>
+                </ul>
+            </div>
+            <div class="main-upgrades">
+                <h2 id="upgrades-title">Delorean Upgrades</h2>
+                <div class="upgrades-container">
+                    <div class="upgrade-item">
+                        <div class="upgrade-box">
+                        <img src="../images/upgrades/flux-cap.png" alt="Flux Capacitor">
+                        </div>
+                        <a href="#flux-capacitor" class="upgrade-link">Flux Capacitor</a>
+                    </div>
+                    
+                    <div class="upgrade-item">
+                        <div class="upgrade-box">
+                        <img src="../images/upgrades/flame.jpg" alt="Flame Decals">
+                        </div>
+                        <a href="#flame-decals" class="upgrade-link">Flame Decals</a>
+                    </div>
+
+                    <div class="upgrade-item">
+                        <div class="upgrade-box">
+                        <img src="../images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
+                        </div>
+                        <a href="#bumper-stickers" class="upgrade-link">Bumper Stickers</a>
+                    </div>
+
+                    <div class="upgrade-item">
+                        <div class="upgrade-box">
+                        <img src="../images/upgrades/hub-cap.jpg" alt="Hub Caps">
+                        </div>
+                        <a href="#hub-caps" class="upgrade-link">Hub Caps</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
