Minor bug fixes

--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -5,7 +5,7 @@
     res.redirect('/')
   } %>
 
-  <img id="errorImg" src="/images/site/ErrorOops.jpg"></img>
+  <img id="errorImg" alt="Opps error page" src="/images/site/ErrorOops.jpg"></img>
 
 <%# Message Block %>
 <p id="errorMessage"><%- message %></p>
