Week 4 - Learning Activity Pt1.1

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,9 @@
 
 <div id="main-title">   
     <h1>Welcome to CSE Motors!</h1>
+
+    <%- messages() %>
+    
 </div>
 <div class="main-content">
     <img src="../images/vehicles/delorean.jpg" alt="Delorean" class="main-image">
