--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,5 +1,5 @@
 <main>
-  <h1><%= title %></h1>
+  <h2 id="loginHeading"><%= title %></h2>
 
   <!-- Flash Message -->
   <div class="flash-message">
