--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,5 +1,5 @@
 <main>
-  <h1><%= title %></h1>
+  <h2 id="registerHeading"><%= title %></h2>
 
   <p class="form-instructions">
     All fields marked with <span class="required">*</span> are required.
