--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,4 +1,4 @@
-<h2 id="loginHeading"><%= title %></h2>
+<h2 class="sub-heading"><%= title %></h2>
 
 <!-- Flash Message -->
 <div class="flash-message">
