--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,6 +1,6 @@
 <%# Content Heading %>
 <% if (title) { %>
-  <h2 id="errorHeading">Error <%= title %></h2>
+  <h2 class="sub-heading">Error <%= title %></h2>
   <% } else {
     res.redirect('/')
   } %>
