--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,6 +1,6 @@
 <%# Content Heading %>
 <% if (title) { %>
-    <h2 id="classificationHeading"><%= title %></h2>
+    <h2 class="sub-heading"><%= title %></h2>
     <% } else {
       res.redirect('/')
     } %>
