--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,4 +1,4 @@
-<h2 id="registerHeading"><%= title %></h2>
+<h2 class="sub-heading"><%= title %></h2>
 
 <p class="form-instructions">
   All fields marked with <span class="required">*</span> are required.
