--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -24,7 +24,7 @@
   <p>Select a classification from the list below to see the items belonging to that classification.</p>
 
   <!-- Classification Dropdown -->
-  <div>
+  <div id="manageInvClassification">
     <%- classificationSelect %>
   </div>
 
