--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,17 @@
-  <header id="header">
-    <div id="branding">
-      <a href="/" class="brand-link" title="Return to home page">
-        <span class="brand-title">CSE Motors</span>
-      </a>
-    </div>
-    <div id="account">
-      <a href="/account/login" class="account-link">My Account</a>
-    </div>
-  </header>
-  
+<header id="header">
+  <!-- Logo Section -->
+  <div id="branding">
+    <a href="/" class="brand-link" title="Return to home page">
+      <span class="brand-title">CSE Motors</span>
+    </a>
+  </div>
+  <div id="account">
+    <!-- Dynamic Links Based on Login Status -->
+    <% if (locals.loggedin) { %>
+      <a href="/account/" class="welcome-link">Welcome <%= locals.clientName || 'User' %></a>
+      <a href="/account/logout" class="logout-link">Logout</a>
+    <% } else { %>
+      <a href="/account/login" class="login-link">My Account</a>
+    <% } %>
+  </div>
+</header>
